# panel-siemens-ix

./: .gitignore  README.md  pyproject.toml
.gemini/: settings.json
.github/workflows/: publish.yml
__marimo__/session/: demo.py.json
dev/: Untitled.ipynb
dev/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  demo-checkpoint.py
examples/: README.md
src/panel_siemens_ix/: __init__.py  colors.py  theme.py
