[project]
name = "panel-siemens-ix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "legout", email = "ligno.blades@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "panel>=1.7.4",
    "panel-material-ui>=0.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src/panel_siemens_ix/static/**"
]

[tool.hatch.build.targets.wheel]
include = [
    "src/panel_siemens_ix/static/**"
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "jupyterlab>=4.4.5",
    "marimo>=0.14.12",
]
