[project]
name = "panel-siemens-ix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "legout", email = "ligno.blades@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "panel>=1.7.4",
    "panel-material-ui",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hvplot>=0.11.3",
    "ipython>=9.4.0",
    "jupyter-bokeh>=4.0.5",
    "jupyterlab>=4.4.5",
    "marimo>=0.14.12",
    "svgutils>=0.3.4",
]

[tool.uv.sources]
panel-material-ui = { git = "https://github.com/panel-extensions/panel-material-ui" }
